--- a/week1/day2/ex1/index.html
+++ b/week1/day2/ex1/index.html
@@ -18,7 +18,7 @@
         </nav>
     </header>
     <footer>
-        <p>Developer Name</p>
+        <p>Developed by Avi</p>
     </footer>
 </body>
 </html>
