--- a/week6/day2/index.html
+++ b/week6/day2/index.html
@@ -7,6 +7,26 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <select id="school-type"> 
+        <option value="middleschool">Middle School</option>
+        <option value="university">University</option>
+        <option value="college">College</option>
+    </select>
+    <form name="personform">
+        <input name="age" value="25">
+        <input name="height" value="167">
+      </form>
+      
+      <form name="dogform">
+        <input name="petname" value="Rex">
+        <input name="petage" value="2">
+      </form>
+      <form name="radioForm">
+        <label for="age">Age 10</label>
+        <input type="radio" name="age" value="10">
+        <label for="age">Age 20</label>
+        <input type="radio" name="age" value="20">
+      </form>
     <h1>Day2 to Javascript</h1>
     <h1 class="Header">DOM</h1>
     <div class="container">Hello</div>
